<?xml version="1.0"?>
<package>
    <name>tracking_node</name>
    <version>0.0.0</version>
    <description>tracking node estimating the position of the marker model</description>
    <maintainer email="simon.trendel@tum.de">Simon Trendel</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>image_transport</build_depend>
    <build_depend>rviz</build_depend>
    <build_depend>communication</build_depend>

    <run_depend>rviz</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>message_runtime</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>cv_bridge</run_depend>
    <run_depend>image_transport</run_depend>
    <run_depend>communication</run_depend>

    <export>
        <rviz plugin="${prefix}/mocap_plugin.xml"/>
    </export>
</package>
