<?xml version="1.0"?>
<package>
    <name>vision_node</name>
    <version>0.0.0</version>
    <description>vision node publishing position in camera image</description>
    <maintainer email="simon.trendel@tum.de">Simon Trendel</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>geometry_msgs</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>message_runtime</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>message_generation</run_depend>

    <export>
    </export>
</package>
