cmake_minimum_required(VERSION 2.8)
project( picam )
SET(COMPILE_DEFINITIONS -Werror)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -g")
find_package( OpenCV REQUIRED )
include_directories(/opt/vc/interface/vcos)
include_directories(/opt/vc/include)
include_directories(/opt/vc/interface/vcos/pthreads)
include_directories(/opt/vc/interface/vmcs_host/linux)
include_directories(/opt/vc/host_applications/linux/libs/bcm_host/include)
add_executable(picam picam.cpp camera.cpp cameracontrol.cpp)
target_link_libraries(picam /opt/vc/lib/libmmal_core.so /opt/vc/lib/libmmal_util.so /opt/vc/lib/libmmal_vc_client.so /opt/vc/lib/libvcos.so /opt/vc/lib/libbcm_host.so ${OpenCV_LIBS})
